tests/paczka1/fuzzy1/93335491.err
Error in line 8: IfmWw S653 86,95
Error in line 17: JIhS5h S653 67,56
Error in line 15: JIhS5h S238 47,3
Error in line 28: S558 S238 51,2
Error in line 26: JIhS5h S558 88,5
